update account.html style

--- a/account.html
+++ b/account.html
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
+    <script src="script.js"></script>
+
 </head>
 <body>
     <div class="selection">
@@ -22,7 +24,7 @@
     <div class="form">
         <div class="landing2">
             <h1>Island <span>Games</span></h1>
-          </div>
+        </div>
           <form action="">
               <input type="text" id="pin" name="pin" placeholder="Game Pin" value=""><br>
               <input type="text" id="pin" name="pin" placeholder="Gender" value=""><br>
