--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
+    <script src="script.js"></script>
+
   </head>
   <body>
+    <!-- <audio controls autoplay>
+      <source src="assets/Voicy_Love Island Theme Song.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+    </audio> -->
+
     <!-- Top navigation -->
+    
     <div class="topnav">
       <a href="index.html">
         <img src="assets/Untitled-1 copy.png" alt="" />
@@ -24,12 +32,13 @@
         <h1>Island <span>Games</span></h1>
       </div>
       <div class="explore">
-        <button>
+        <button id="exploreButton">
           <a href="account.html">Explore</a>
         </button>
       </div>
     </div>
-
    
   </body>
+
+
 </html>
