update userprofile.html and css

--- a/account.html
+++ b/account.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1, user-scalable=0" >
     <title>Account Set-Up</title>
+    <link rel="icon" type="image/x-icon" href="assets/DDSbluelogo copy.png">
+
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,17 +35,17 @@
 
               <div class="explore2">
                   <button id="islander">
-                      <a href="#">Islander</a>
+                      <a href="userprofile.html">Islander</a>
                   </button>
                   <button id="bombshell">
-                      <a href="#">Bombshell</a>
+                      <a href="userprofile.html">Bombshell</a>
                   </button>
               </div>
           </form>
       
         
           <div class="public">
-            <a href="">
+            <a href="userprofile.html">
                 <p>Continue as Guest...</p>
             </a>
           </div>
