--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Island Games</title>
+    <link rel="icon" type="image/x-icon" href="assets/DDSblacklogo.png">
+
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,23 +22,26 @@
     Your browser does not support the audio element.
     </audio> -->
 
-    <!-- Top navigation -->
+    <div class="welcome">
+ <!-- Top navigation -->
     
-    <div class="topnav">
-      <a href="index.html">
-        <img src="assets/Untitled-1 copy.png" alt="" />
-      </a>
+ <div class="topnav">
+  <a href="index.html">
+    <img src="assets/Untitled-1 copy.png" alt="" />
+  </a>
+</div>
+<div class="center">
+  <div class="landing">
+    <h1>Island <span>Games</span></h1>
+  </div>
+  <div class="explore">
+    <button id="exploreButton">
+      <a href="account.html">Explore</a>
+    </button>
+  </div>
+</div>
     </div>
-    <div class="center">
-      <div class="landing">
-        <h1>Island <span>Games</span></h1>
-      </div>
-      <div class="explore">
-        <button id="exploreButton">
-          <a href="account.html">Explore</a>
-        </button>
-      </div>
-    </div>
+   
    
   </body>
 
