update css animation

--- a/account.html
+++ b/account.html
@@ -25,7 +25,7 @@
           </div>
     <div class="form">
         <div class="landing2">
-            <h1>Island <span>Games</span></h1>
+            <h1>Summer <span>Games</span></h1>
         </div>
           <form action="">
               <input type="text" id="pin" name="pin" placeholder="Game Pin" value=""><br>
