--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div>
 <div class="center">
   <div class="landing">
-    <h1>Island <span>Games</span></h1>
+    <h1>Summer <span>Games</span></h1>
   </div>
   <div class="explore">
     <button id="exploreButton">
