--- a/userprofile.html
+++ b/userprofile.html
@@ -14,6 +14,7 @@
     <script src="script.js"></script>
 </head>
 <body>
+  <div class="couplepage">
     <div class="profile">
       <div class="proimg">
         <img src="assets/etty-fidele-jhD3hdnlBww-unsplash.jpg" alt="Avatar" class="avatar">
@@ -62,5 +63,7 @@
         <a href="#">Couple</a>
       </div>
     </div>
+  </div>
+    
 </body>
 </html>
