update css animation

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
   </head>
   <body>
-    <!-- <audio controls autoplay>
+    <audio controls autoplay hidden>
       <source src="assets/Voicy_Love Island Theme Song.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
-    </audio> -->
+    </audio>
 
     <div class="welcome">
  <!-- Top navigation -->
@@ -31,12 +31,20 @@
   </a>
 </div>
 <div class="center">
+
+  <div class="animate seven">
+    <span>W</span><span>e</span><span>l</span><span>c</span><span>o</span><span>m</span><span>e</span>
+  </div>
+
+
   <div class="landing">
-    <h1>Summer <span>Games</span></h1>
+    <!-- <h1 id="intro">Welcome</h1> -->
+    <p>To the <span>loveisland</span> inspried</p>
+    <h1 id="topic">Summer <span>Games</span></h1>
   </div>
   <div class="explore">
     <button id="exploreButton">
-      <a href="account.html">Explore</a>
+      <a href="account.html">BEGIN</a>
     </button>
   </div>
 </div>
